--- a/index.html
+++ b/index.html
@@ -86,15 +86,19 @@
 
 body {
     min-height: 110vh;
-    background-color: #4ca1af;
+    background-color: #ffffff;
     background-image: linear-gradient(135deg, #4ca1af 0%, #c4e0e5 100%);
+}
+.navvy{
+  width: fit-content;
 }
 
   </style>
 </head>
 <body>
   <!-- Navbar-->
-<header class="header">
+<div class="navvy">
+  <header class="header">
     <nav class="navbar navbar-expand-lg fixed-top py-3">
         <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">KIUTSO AWARDS 2023</a>
             <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
@@ -111,6 +115,7 @@ body {
         </div>
     </nav>
 </header>
+</div>
 
 
 
