--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@ img{
   .footer ,footer-social-icons {
     height: 100px;
   }
+  li{
+    color: rgb(250, 246, 246);
+    background-color: #fff;
+}
   
 }
 
 li{
-    color: rgb(250, 246, 246);
+    color: rgb(0, 0, 0);
+    
 }
 
 
