--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ img{
   }
   li{
     color: rgb(250, 246, 246);
-    background-color: #fff;
+    background-color:  linear-gradient(135deg, #4CAF50 0%, #ffffff 100%);
 }
   
 }
