--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ li{
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" >
-    <a class="navbar-brand" href="#">KIUTSO AWARDS</a>
+    <a class="navbar-brand" href="#">KIUTSO AWARDS 2023</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
