--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ showSlides(slideIndex += n);
       <a href="#"><i class="fa fa-facebook"></i></a>
       <a href="#"><i class="fa fa-instagram"></i></a>
       <a href="#"><i class="fa fa-whatsapp"></i></a>
-      <br><a href="https://instagram.com/abukauthar_malcom?igshid=YmMyMTA2M2Y=">© abukauthar rashid vunde</a>
+      <br><a href="https://instagram.com/abukauthar_malcom?igshid=YmMyMTA2M2Y=" style="font-size: 10px;">© abukauthar rashid vunde</a>
     </div>
   </footer>
 </body>
