--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@ li{
     <div class="imageplace">
       <div class="slideshow-container">
         <div class="mySlides ">
+          <img src="images/henry katonge.jpg">
+        </div>
+        <div class="mySlides ">
           <img src="images/image1.jpg">
         </div>
         <div class="mySlides ">
