--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>kiutsoawards2023</title>
+  <link rel="icon" href="images/image7.jpg" type="image/jpg">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
@@ -182,6 +183,62 @@ li{
 .fa:hover {
   transform: scale(1.3);
 }
+
+
+ /* Popup card styles */
+ .popup-card {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 100%;
+        width: 400px;
+        height: 400px;
+        background-color: white;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        padding: 20px;
+        box-sizing: border-box;
+      }
+
+      .popup-card img {
+        display: block;
+        margin: 0 auto;
+        max-width: 50%;
+        height: auto;
+        margin-top: 20px;
+        border-radius: 50%;
+      }
+
+      .popup-card h2,
+      .popup-card p {
+        text-align: center;
+        margin: 0;
+      }
+
+      .popup-card .contact {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+
+      .popup-card .contact .person {
+        width: 45%;
+        margin: 10px 0;
+      }
+
+      .popup-card button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        font-weight: bold;
+        color: rgb(0, 0, 0);
+        border: none;
+        background: none;
+        cursor: pointer;
+      }
+
+
   </style>
 </head>
 <body>
@@ -193,11 +250,11 @@ li{
   
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold" style="color: black;">Home <span class="sr-only">(current)</span></a></li>
+        <li class="nav-item active"><a href="#"  class="nav-link text-uppercase font-weight-bold" style="color: black;">Home <span class="sr-only">(current)</span></a></li>
         <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold" style="color: black;">Awards</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold" style="color: black;">Vote</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold" style="color: black;">University</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold" style="color: black;">Contact</a></li>
+        <li class="nav-item"><a href="#" onclick="myFunction()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Vote</a></li>
+        <li class="nav-item"><a href="https://kiut.ac.tz/" class="nav-link text-uppercase font-weight-bold" style="color: black;">University</a></li>
+        <li class="nav-item"><a    onclick="openPopup()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Contact</a></li>
         
       </ul>
     </div>
@@ -261,6 +318,18 @@ function plusSlides(n) {
 showSlides(slideIndex += n);
 }
 
+function myFunction() {
+  alert("Voting for the KIUTSO Awards has not yet started. Please wait for further announcements from the Minister of Sports and Entertainment of KIUTSO.");
+}
+
+function openPopup() {
+        document.getElementById("popup").style.display = "block";
+      }
+
+      function closePopup() {
+        document.getElementById("popup").style.display = "none";
+      }
+
    </script>
    <hr>
    </div>
@@ -272,6 +341,23 @@ showSlides(slideIndex += n);
       <br><a href="https://instagram.com/abukauthar_malcom?igshid=YmMyMTA2M2Y=" style="font-size: 10px;">© abukauthar rashid vunde</a>
     </div>
   </footer>
+
+
+  <div id="popup" class="popup-card" style="display: none;">
+    <button onclick="closePopup()">X</button>
+    <div class="contact">
+      <div class="person">
+        <img src="images/henry katonge.jpg" alt="Person 1" />
+        <h2>John Doe</h2>
+        <p>Phone: 123-456-7890</p>
+      </div>
+      <div class="person">
+        <img src="images/henry katonge.jpg" alt="Person 2" />
+        <h2>Jane Smith</h2>
+        <p>Phone: 987-654-3210</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
 </body>
