--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ li{
     </div>
     <br><br><br><br>
     <div class="button-container">
-      <button class="button">VOTE</button>
+      <button class="button"  onclick="myFunction()">VOTE</button>
       <button class="button">REGISTER</button>
     </div>
    </div>
