--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ li{
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item active"><a href="#"  class="nav-link text-uppercase font-weight-bold" style="color: black;">Home <span class="sr-only">(current)</span></a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold" style="color: black;">Awards</a></li>
+        <li class="nav-item"><a href="awards2.html" class="nav-link text-uppercase font-weight-bold" style="color: black;">Awards</a></li>
         <li class="nav-item"><a href="#" onclick="myFunction()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Vote</a></li>
         <li class="nav-item"><a href="https://kiut.ac.tz/" class="nav-link text-uppercase font-weight-bold" style="color: black;">University</a></li>
         <li class="nav-item"><a    onclick="openPopup()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Contact</a></li>
