--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ li{
     <br><br><br><br>
     <div class="button-container">
       <button class="button"  onclick="myFunction()">VOTE</button>
-      <button class="button">REGISTER</button>
+      <a href="REGISTRATION PAGE.html"><button class="button" >REGISTER</button></a>
     </div>
    </div>
    <hr>
