--- a/index.html
+++ b/index.html
@@ -344,16 +344,16 @@ function openPopup() {
 
 
   <div id="popup" class="popup-card" style="display: none;">
-    <button onclick="closePopup()">X</button>
+    <button onclick="closePopup()" style="color: red;">X</button>
     <div class="contact">
       <div class="person">
         <img src="images/henry katonge.jpg" alt="Person 1" />
-        <h2>John Doe</h2>
+        <h2>KOMBO MASUD KHATIB</h2>
         <p>Phone: 123-456-7890</p>
       </div>
       <div class="person">
         <img src="images/henry katonge.jpg" alt="Person 2" />
-        <h2>Jane Smith</h2>
+        <h2>CHARLES NDUGURU</h2>
         <p>Phone: 987-654-3210</p>
       </div>
     </div>
