--- a/award3.html
+++ b/award3.html
@@ -204,12 +204,12 @@ body {
     </div>
   </nav>
     <form class="form_container">
-        <div class="logo_container"> <img src="images/image4.jpg" alt="" style="width: 100%;"></div>
+        <div class="logo_container"> <img src="images/image4.jpg" alt="" style="width: 100%; border-radius: 35%;"></div>
         <div class="title_container">
           <p class="title">Click the category to see discriptions</p>
-          <span class="subtitle">Get started to vote, just create an account and enjoy the experience.</span>
+          <span class="subtitle">Each  category will display  it's  description  once you click the  item</span>
         </div>
-        <br>
+        
   <button title="Sign In" type="submit" class="sign-in_btn" onclick="mrandmrs()">
     <span>Miss/Mr KIUT</span>
   </button>
@@ -473,16 +473,16 @@ function bestfemaleactor(){alert("Best Female Actor - Exceptional acting ability
 function bestmale(){alert("Best drawing artist: Recognition for exceptional talent in freehand drawing or sketching.")}
  function bestgraphicdesigner(){alert(" Best graphic designer: Recognition for exceptional talent in designing for digital or print media.")}
  function bestdancer(){alert(" Best dancers: Recognition for exceptional talent in various dance styles and techniques.")}
-   function bestenterpreneur(){(" Best entrepreneur: Recognition for exceptional skill in creating and growing successful businesses.")}
+   function bestenterpreneur(){alert(" Best entrepreneur: Recognition for exceptional skill in creating and growing successful businesses.")}
   function bestskiutsoleader(){alert  (" Best kiutso leader: Recognition for exceptional leadership in the KIUTSO organization.")}
     function bestmalepresenter(){alert(" Best male presenter: Recognition for exceptional male presentation skills in media or public speaking.")}
    function bestfemalepresenter(){alert (" Best female presenter: Recognition for exceptional female presentation skills in media or public speaking.")}
-    function bestnetballer (){lert("Best netball player: Recognition for exceptional skill in playing the sport of netball.")}
-    function bestfootballer(){lert("Best footballer: Recognition for exceptional skill in playing the sport of football.")}
-    function berstmalevolleyballer(){ lert ("Best male volleyballer: Recognition for exceptional skill in playing the sport of volleyball (male).")}
-    function bestfemalevollyballer(){ lert("Best female volleyballer: Recognition for exceptional skill in playing the sport of volleyball (female).")}
-    function bestmusicproducer(){lert ("Best music producer: Recognition for exceptional talent in producing music.")}
-    function besthairdresser(){lert ("Best hairdresser: Recognition for exceptional skill in hair cutting, styling, and coloring.")}
+    function bestnetballer (){alert("Best netball player: Recognition for exceptional skill in playing the sport of netball.")}
+    function bestfootballer(){alert("Best footballer: Recognition for exceptional skill in playing the sport of football.")}
+    function berstmalevolleyballer(){ alert ("Best male volleyballer: Recognition for exceptional skill in playing the sport of volleyball (male).")}
+    function bestfemalevollyballer(){ alert("Best female volleyballer: Recognition for exceptional skill in playing the sport of volleyball (female).")}
+    function bestmusicproducer(){alert ("Best music producer: Recognition for exceptional talent in producing music.")}
+    function besthairdresser(){alert ("Best hairdresser: Recognition for exceptional skill in hair cutting, styling, and coloring.")}
     function bestofbest(){ alert("Best of best: Recognition for the most outstanding performance among all KIUTSO awards.")}
     
     function openPopup() {
