--- a/award3.html
+++ b/award3.html
@@ -136,9 +136,9 @@ body {
         transform: translate(-50%, -50%);
         max-width: 100%;
         width: 400px;
-        height: 200px;
-        background-color: white;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        height: 300px;
+        background-color: #4CAF50;
+        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
         padding: 20px;
         box-sizing: border-box;
       }
