--- a/index.html
+++ b/index.html
@@ -187,15 +187,16 @@ li{
 
  /* Popup card styles */
  .popup-card {
-        position: fixed;
+        
+  position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         max-width: 100%;
         width: 400px;
-        height: 400px;
-        background-color: white;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        height: 300px;
+        background-color: #4CAF50;
+        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
         padding: 20px;
         box-sizing: border-box;
       }
@@ -224,6 +225,7 @@ li{
       .popup-card .contact .person {
         width: 45%;
         margin: 10px 0;
+        font-size: medium;
       }
 
       .popup-card button {
