--- a/REGISTRATION PAGE.html
+++ b/REGISTRATION PAGE.html
@@ -7,7 +7,7 @@
   <title>KIUTSO Awards Registration</title>
   <style>
     body {
-      background-color: white;
+      background-image: linear-gradient(135deg, #4CAF50 0%, #ffffff 100%);
       font-family: Arial, sans-serif;
     }
 
@@ -49,6 +49,12 @@
 
     .btn:hover {
       background-color: #3e8e41;
+    }
+    @media (max-width:767px) {
+      .form-container{
+        width:100%;
+      margin: 50px auto;
+      }
     }
   </style>
 </head>
