--- a/REGISTRATION PAGE.html
+++ b/REGISTRATION PAGE.html
@@ -38,12 +38,13 @@
     }
 
     .btn {
-      width: 100%;
+      width: 20%;
       background-color: #4CAF50;
       color: #fff;
       padding: 10px;
       border-radius: 5px;
       cursor: pointer;
+      margin-left: 30%;
       border: none;
     }
 
