--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@ height: fit-content;
     <div class="imageplace">
       <div class="slideshow-container">
         <div class="mySlides ">
+          <img src="images/image1.png">
+        </div>
+        <div class="mySlides ">
           <img src="images/Kiutso Awards Look And Feel Designs-2.png">
         </div>
         <div class="mySlides ">
-          <img src="images/image1.png">
-        </div>
-        <div class="mySlides ">
-          <img src="images/image1.png">
+          <img src="images/Kiutso Awards Look And Feel Designs-2.png">
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
