--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ height: fit-content;
                achievement of our winners, and be inspired by their stories of success</p>
         </div>
    </div>
-   <div class="sponsorship place" style="width: 70%; padding-left: 5%;">
+   <div class="sponsorship place" style="width: 70%; padding-left: 5%; margin-left: 15%;">
     <h3>YOU WANT TO BECOME SPONSOR ?</h3>
     <img src="images/image2.jpg" alt="">
     <h4>Contact us today for sponsorship or   deposit now i our  CRDB  bank acoount now </h4>
