--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@ img{
   .footer ,footer-social-icons {
     height: 70px;
   }
-
+  .bankk{
+  margin-left: 2%;
+}
 }
 
 
@@ -447,6 +449,9 @@ height: fit-content;
 }
 .bankk{
   margin-left: 30%;
+  width: 70%;
+   padding-left: 5%;
+    margin-left: 15%
 }
 
   </style>
