--- a/index.html
+++ b/index.html
@@ -516,29 +516,7 @@ height: fit-content;
    </div>
    <br><br>
    <hr>
-   <div class="formrmrs">
-        <div class="formr">
-          <h1>MR KIUT</h1>
-            <p>The Kiutso Awards is a prestigious annual program that
-              honors exceptional individuals  among students of kampala international university who have achieved remarkable success in
-               their field . From groundbreaking innovations to unparalleled contributions,
-                the program celebrates the best and brightest across various areas of expertise. 
-                Join us in recognizing and applauding the outstanding talent and
-                 achievement of our winners, and be inspired by their stories of success</p>
-                 <div class="button-container">
-                  <a href="REGISTRATION PAGE.html"><button class="button">nominees</button></a>
-                </div>
-        </div>
-        <div class="formrs">
-          <h1>MISS KIUT</h1>
-          <p>The Kiutso Awards is a prestigious annual program that
-            honors exceptional individuals  among students of kampala international university who have achieved remarkable success in
-             their field . From groundbreaking innovations to unparalleled contributions,
-              the program celebrates the best and brightest across various areas of expertise. 
-              Join us in recognizing and applauding the outstanding talent and
-               achievement of our winners, and be inspired by their stories of success</p>
-        </div>
-   </div>
+   
    <div class="sponsorship place" style="width: 70%; padding-left: 5%; margin-left: 15%;">
     <h3>YOU WANT TO BECOME SPONSOR ?</h3>
     <img src="images/image2.jpg" alt="">
@@ -624,6 +602,29 @@ height: fit-content;
       </div>
   </div>
    </div>
+   <div class="formrmrs">
+        <div class="formr">
+          <h1>MR KIUT</h1>
+            <p>The Kiutso Awards is a prestigious annual program that
+              honors exceptional individuals  among students of kampala international university who have achieved remarkable success in
+               their field . From groundbreaking innovations to unparalleled contributions,
+                the program celebrates the best and brightest across various areas of expertise. 
+                Join us in recognizing and applauding the outstanding talent and
+                 achievement of our winners, and be inspired by their stories of success</p>
+                 <div class="button-container">
+                  <a href="REGISTRATION PAGE.html"><button class="button">nominees</button></a>
+                </div>
+        </div>
+        <div class="formrs">
+          <h1>MISS KIUT</h1>
+          <p>The Kiutso Awards is a prestigious annual program that
+            honors exceptional individuals  among students of kampala international university who have achieved remarkable success in
+             their field . From groundbreaking innovations to unparalleled contributions,
+              the program celebrates the best and brightest across various areas of expertise. 
+              Join us in recognizing and applauding the outstanding talent and
+               achievement of our winners, and be inspired by their stories of success</p>
+        </div>
+   </div><hr>
    <footer class="footer">
     <div class="footer-social-icons">
       <a href="#"><i class="fa fa-facebook"></i></a>
