--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ img{
 		margin-bottom: 10px;
 		
 	}
+	.imageenct{
+		width: 100%;
+	}
 	.row {   
 		flex-direction: column;
 	}
@@ -446,6 +449,7 @@ li{
 			<ul class="navbar-nav">
 				<li class="nav-item active"><a href="#"  class="nav-link text-uppercase font-weight-bold" style="color: black;">Home <span class="sr-only">(current)</span></a></li>
 				<li class="nav-item"><a href="award3.html" class="nav-link text-uppercase font-weight-bold" style="color: black;">Awards</a></li>
+				<li class="nav-item"><a href="images/kiutso2223.jpeg" class="nav-link text-uppercase font-weight-bold" style="color: black;">Kiutso22/23</a></li>
 				<li class="nav-item"><a href="#" onclick="myFunction()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Vote</a></li>
 				<li class="nav-item"><a href="https://kiut.ac.tz/" class="nav-link text-uppercase font-weight-bold" style="color: black;">University</a></li>
 				<li class="nav-item"><a    onclick="openPopup()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Contact</a></li>
@@ -487,7 +491,7 @@ li{
 			<button class="button"  onclick="myFunction()">VOTE</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="REGISTRATION PAGE.html"><button class="button" >REGISTER</button></a>
 		</div>
-		
+		<br>
 		<marquee behavior="scroll" direction="left"><h3 class="nextlevel"> "THIS IS THE PHASE <br> WE TOLD YOU AND IT WONT REPEAT" </h3></marquee>
 	 </div>
 	 <hr>
@@ -497,9 +501,10 @@ li{
 	 <div class="sponsorship "> 
 	 <div  style="width: 70%; padding-left: 5%; margin-left: 15%;">
 		<h3>YOU WANT TO BECOME SPONSOR ?</h3>
-		<img src="images/image2.jpg" alt="">
-		<h4>Contact us today for sponsorship or   deposit now i our  CRDB  bank acoount now </h4>
-		<h3>bank details</h3>
+		<img  class="imageenct" src="images/image2.jpg" alt="">
+		<h4>Contact us today for sponsorship  </h4>
+		<button class="button"  onclick="openPopup()" >CONTACTS</button>
+		<h3>BANK DETAILS</h3>
 	 </div>
 
 	 <div class="bankk">
