--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ img{
 	}
 	.imageenct{
 		width: 100%;
+		padding-left: 0%;
+		 margin-left: 0%;
 	}
 	.row {   
 		flex-direction: column;
@@ -452,7 +454,7 @@ li{
 				<li class="nav-item"><a href="images/kiutso2223.jpeg" class="nav-link text-uppercase font-weight-bold" style="color: black;">Kiutso22/23</a></li>
 				<li class="nav-item"><a href="#" onclick="myFunction()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Vote</a></li>
 				<li class="nav-item"><a href="https://kiut.ac.tz/" class="nav-link text-uppercase font-weight-bold" style="color: black;">University</a></li>
-				<li class="nav-item"><a    onclick="openPopup()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Contact</a></li>
+				<li class="nav-item"><a onclick="openPopup()" class="nav-link text-uppercase font-weight-bold" style="color: black;">Contact</a></li>
 				
 			</ul>
 		</div>
@@ -471,7 +473,7 @@ li{
 					<img src="images/Kiutso Awards Look And Feel Designs-2.png">
 				</div>
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+				<a class="next" onclick="plusSlides(-1)">&#10095;</a>
 			</div>
 		</div>
 		<div class="cardplace">
@@ -504,6 +506,7 @@ li{
 		<img  class="imageenct" src="images/image2.jpg" alt="">
 		<h4>Contact us today for sponsorship  </h4>
 		<button class="button"  onclick="openPopup()" >CONTACTS</button>
+		<a href="images/kiutso2223.jpeg"><button class="button">KIUTSO</button></a>
 		<h3>BANK DETAILS</h3>
 	 </div>
 
